# nzcvm

./: .gitignore  =0.24.2  Cargo.toml  Justfile  README.md  conftest.py  lefthook.yml  pyproject.toml  view_file.py
.github/workflows/: benchmarks.yml  ci.yml
benches/: model_bench.rs
benchmarks/: benchmark_generate.py
examples/: 2014p240655.toml  2014p240655_emod3d.toml  model.toml  near_fault.py  near_fault_config.toml  whole_country.toml
nzcvm/: __init__.py  chunks.py  components.py  coordinates.py  curvilinear_mesh.py  ely_taper.py  generate.py  geomodelgrid.py  graph.py  grid.py  logging.py  mesh.py  model.py  model_spec.py  qualities.py  query.py  registry.py  surface.py  velocity_model.py  xarray.py
nzcvm/config/: __init__.py  core.py  metadata.py  model_spec.py  validation.py  velocity_model.py
nzcvm/config/grids/: __init__.py  core.py  emod3d.py  model.py  regular.py  sw4.py
nzcvm/config/layers/: __init__.py  clamp.py  coastline.py  core.py  ely.py  offshore.py  query.py
nzcvm/formats/: __init__.py  datatree.py  emod3d.py  netcdf.py  protocol.py  quantise.py  rfile.py  sfile.py
nzcvm/grids/: __init__.py  builder.py  emod3d.py  grid.py  helpers.py  regular.py  sw4.py
nzcvm/layers/: __init__.py  affine.py  clamp.py  coastline.py  coordinates.py  core.py  crs.py  depth.py  dummy.py  ely.py  functional.py  helpers.py  identity.py  offshore.py  pipeline.py  protocol.py  query.py  registry.py
nzcvm/models/: __init__.py  mesh.py  model.py  surface.py
nzcvm/scripts/: __init__.py  construct_mesh.py  convert_tiff.py  convert_tomography.py  convert_topography.py  nzcvm.py  surface_cli.py  test_borehole.py  test_slice.py  tree_stats.py  view.py  view_basin.py  voxel_analyse.py
scripts/: construct_mesh.py  convert_model.py  convert_tomography.py  convert_topography.py  test_borehole.py  test_slice.py  tree_stats.py  view_basin.py  voxel_analyse.py
src/: blend.rs  coordinates.rs  crs.rs  generate.rs  geometry.rs  geomodelgrid.rs  layers.rs  lib.rs  main.rs  mesh.rs  model.rs  model_tree.rs  parse.rs  quality.rs  quality_interpolator.rs  query.rs  real.rs  rfile.rs  simplex.rs  surface.rs  tree_query.rs  triangle.rs  uniformmodel.rs  writer.rs
tests/: conftest.py  test_cli.py  test_config.py  test_coordinates.py  test_geomodelgrid.py  test_grid.py  test_layers.py  test_mesh_io.py  test_model.py  test_model_python.py  test_model_rust.py  test_offshore.py  test_pipeline.py  test_sfile.py  test_surface.py
tests/fixtures/: squeeze.py
