[build-system]
requires = ["maturin>=1.12,<2.0", "cffi"] # Maturin requires cffi to build with!
build-backend = "maturin"

[project]
name = "nzcvm"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "meshio>=5.3.5",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pyproj>=3.7.2",
    "pyvista>=0.47.2",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
    "xarray>=2026.2.0",
    "xoak>=0.2.0",
]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "numpydoc>=1.10.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
