[build-system]
requires = ["maturin>=1.12,<2.0", "cffi"] # Maturin requires cffi to build with!
build-backend = "maturin"

[project]
name = "nzcvm"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "dask[array,diagnostics]>=2026.3.0",
    "geopandas>=1.1.3",
    "h5py>=3.16.0",
    "mashumaro[json,toml,yaml]>=3.20",
    "meshio>=5.3.5",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pandas[parquet]>=3.0.2",
    "psutil>=7.2.2",
    "pyproj>=3.7.2",
    "pyvista>=0.47.2",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "typed-argument-parser>=1.12.0",
    "xarray[io]>=2026.2.0",
    "zarr>=3.1.6",
]

[project.scripts]
nzcvm = "nzcvm.scripts.nzcvm:main"
nzcvm-construct-mesh = "nzcvm.scripts.construct_mesh:main"
nzcvm-convert-tomography = "nzcvm.scripts.convert_tomography:main"
nzcvm-convert-topography = "nzcvm.scripts.convert_topography:main"
nzcvm-tree-stats = "nzcvm.scripts.tree_stats:main"
nzcvm-view-basin = "nzcvm.scripts.view_basin:main"
nzcvm-voxel-analyse = "nzcvm.scripts.voxel_analyse:main"
nzcvm-borehole = "nzcvm.scripts.test_borehole:main"
nzcvm-slice = "nzcvm.scripts.test_slice:main"

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "numpydoc>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
