[build-system]
requires = ["maturin>=1.12,<2.0", "cffi"] # Maturin requires cffi to build with!
build-backend = "maturin"

[project]
name = "nzcvm"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "dask[array,diagnostics]>=2026.3.0",
    "geopandas>=1.1.3",
    "h5py>=3.16.0",
    "mashumaro[json,toml,yaml]>=3.20",
    "meshio>=5.3.5",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pandas[parquet]>=3.0.2",
    "platformdirs>=4.9.6",
    "psutil>=7.2.2",
    "pyproj>=3.7.2",
    "pyvista>=0.47.2",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "tqdm>=4.67.3",
    "typer>=0.24.2",
    "xarray[io]>=2026.2.0",
    "zarr>=3.1.6",
]

[project.scripts]
nzcvm = "nzcvm.scripts.nzcvm:main"

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "numpydoc>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
